Remove unnecessary string resource

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-MovieDBApiToken="925d97b589c1cf4e43f8a1318c597ad5"
+MovieDBApiToken="WRITE_YOUR_API_KEY_HERE"
